# aws-logs-tui

./: Cargo.toml  README.md
src/: main.rs
src/aws/: config.rs  lambda.rs  mod.rs
